# rust-embedded-application-model

./: .gitattributes  Cargo.toml  README.md  build.rs  memory.x  openocd.gdb  reset.tcl
.cargo/: config.toml
examples/: STIM32F3xx_blinky_circle_working.rs  STIM32F3xx_blinky_working.rs  STM32F3xx_blink_blue_south_east_lib.rs  STM32F3xx_blink_blue_south_east_main.rs  STM32F3xx_to_try.rs  basic_embedded_main_setup.rs  button_int.rs  compass.rs  compass_first_attempt.rs  compass_trail_scouting_technology_20251006_1503cet_sdvw.rs  example_out_of_bound_access_panic.rs  probe-rs.toml
openocd/: openocd.cfg  openocd.gdb
src/: compass_trail.rs  lib.rs  main.rs  spi_communication.rs
