[package]
name = "rust-embedded-application-model"
authors = ["StephenVanWijk <stephenvanwijk6@gmail.com>"]
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = "0.6.4"
cortex-m-rt = "0.6.14"
stm32f3-discovery = "0.5.0"
panic-itm = "0.4.2"
panic-halt = "*"
panic-semihosting = "0.6.0"
switch-hal = "0.4.0"